config-arm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      nodeSelector:
        beta.kubernetes.io/arch: arm64
      containers:
      - image: quinont/test-argocd:3.0arm
        name: test
        ports:
        - containerPort: 80
