config-arm/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: test
