config-arm/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myingress
spec:
  rules:
  - host: testarm.internal.local.com
    http:
      paths:
      - path: /
        backend:
          serviceName: test
          servicePort: 80
